<resources>
    <string name="app_name">Email</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_sync_summ">Allow app to sync data automatically, when wifi is avalible</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_sort_by_date">Date</string>
    <string name="pref_sync_list">pref_sync_list</string>
    <string name="pref_sort">pref_sort</string>
    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_title">Allow Sync</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_text">Login</string>

    <string name="inbox">Inbox</string>
    <string name="folders">Folders</string>
    <string name="contacts">Contacts</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>

    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>


    <string name="create_message_title">New Message</string>
    <string name="search_emails">Search Emails</string>

    <string name="message_to">To</string>
    <string name="message_from">From</string>
    <string name="message_subject">Subject</string>
    <string name="message_cc">CC</string>
    <string name="message_bcc">BCC</string>
    <string name="message_content">Content</string>
    <string name="tags_edit">TAGS</string>

    <string name="send_message_menu">Send</string>
    <string name="cancel_sending_menu">Cancel</string>

    <string name="delete_message">Delete</string>
    <string name="reply">Reply</string>
    <string name="reply_to_all">Reply To All</string>
    <string name="forward">Forward</string>

    <string name="create_folder_menu">Create Folder</string>
    <string name="edit_folder_menu">Edit Folder</string>

    <string name="folder_name">Folder Name</string>
    <string name="cancel_folder_creation">Cancel Folder Creation</string>
    <string name="save_folder">Save Folder</string>

    <string name="logout_profile">Log Out</string>

    <string name="new_contact">New Contact</string>
    <string name="save_contact">Save Contact</string>

    <string name="hint_first_name">Ime</string>
    <string name="hint_last_name">Prezime</string>
    <string name="hint_display_name">Prikaz imena</string>
    <string name="hint_email">Email</string>

    <string name = "first_name">First name</string>
    <string name="slicica"></string>
    <string name="delete_contact">Obrisi kontakt</string>
    <string name="choose_image">Izaberi fotografiju</string>
    <string name="show_contacts">Prikazi kontakte</string>

    <string name="save_new_contact">Save New Contact</string>
    <string name="cancel_contact_creation">Cancel Contact Creation</string>

    <string name="submit">Submit</string>


    <string-array name="pref_syncConnectionTypes_entries">
        <item>1 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>1 h</item>
        <item>10 h</item>
    </string-array>

    <string-array name="pref_syncConnectionTypes_values">
        <item>60000</item> <!--//60000-->
        <item>300000</item> <!--//300000-->
        <item>600000</item>
        <item>3600000</item>
        <item>36000000</item>
    </string-array>

    <string-array name="pref_sort_by_date_entries">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string-array name="pref_sort_by_date_values">
        <item>ascending</item>
        <item>descending</item>
    </string-array>

    <string name="search_contacts">Search Contacts</string>


</resources>
