<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:checked="true"
            android:icon="@android:drawable/sym_action_email"
            android:title="@string/inbox" />
        <item
            android:id="@+id/nav_folders"
            android:icon="@drawable/baseline_folder_black_24dp"
            android:title="@string/folders" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/baseline_contacts_black_24dp"
            android:title="@string/contacts" />


    </group>
    <item android:title="Account" >

        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/logout"/>
        </menu>

    </item>
</menu>