<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/email_delete_button"
        android:icon="@drawable/baseline_delete_white_24dp"
        android:orderInCategory="1"
        android:title="@string/delete_message"
        app:showAsAction="always" />
    <item
        android:id="@+id/forward"
        android:icon="@drawable/baseline_arrow_forward_white_24dp"
        android:orderInCategory="4"
        android:title="@string/forward"
        app:showAsAction="always" />

    <item
        android:id="@+id/reply_button"
        android:icon="@drawable/baseline_reply_white_24dp"
        android:orderInCategory="2"
        android:title="@string/reply"
        app:showAsAction="always" />

    <item
        android:id="@+id/reply_to_all_button"
        android:icon="@drawable/baseline_reply_all_white_24dp"
        android:orderInCategory="3"
        android:title="@string/reply_to_all"
        app:showAsAction="always" />

</menu>