<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateContactActivity">

    <include
        android:id="@+id/toolbar_create_contact"
        layout="@layout/toolbar_layout" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_contact"
        android:layout_width="139dp"
        android:layout_height="95dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/person_icon" />

    <Button
        android:padding="15dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="12dp"
        android:background="#4700b3"
        android:layout_gravity="center_horizontal"
        android:id="@+id/choose_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_contact_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_contact_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_last_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>
-->
<!--
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>
    -->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_contact_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_contact_displayname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_display_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/text_view_show_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/show_contacts" />

</LinearLayout>