<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical"
    android:layout_marginTop="20dp">

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/usernameLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/username_field"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_username"
    android:gravity="center"
    style="@style/TextAppearance.AppCompat.Large"/>

</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Large"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="#4700b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_text"
        android:onClick="onLoginButtonClicked"/>

    <TextView

        android:layout_marginRight="20dp"
        android:layout_gravity="right"
        android:text="No account? Register now!"
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


</LinearLayout>